--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores architecto optio obcaecati possimus labore illum nulla, eveniet expedita delectus voluptatibus tempore quia nisi dolorum ex dolor, soluta omnis qui? Minus.</p>
 </article> 
 </section> -->
+<a href="https://api.whatsapp.com/send?phone=3415314230"
+target="_blank" class="whatsapp-icon">
+<img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
+</a>
 <main>
 
         <footer>
