--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -60,7 +60,10 @@
     <h1>Contacto</h1>
     <p id="mapa"> 
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3350.8995872773885!2d-60.701501624535794!3d-32.874376073623054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b653c024f042fb%3A0x85c72be73e85255a!2sEber%20Devis%20GNC!5e0!3m2!1ses-419!2sar!4v1715266638456!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-
+        <a href="https://api.whatsapp.com/send?phone=3415314230"
+        target="_blank" class="whatsapp-icon">
+        <img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
+        </a>
     <footer>
         <div class="contenido-footer">
            <p> 
