--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -71,7 +71,10 @@
    <h3>
     
    </h3>
-
+   <a href="https://api.whatsapp.com/send?phone=3415314230"
+   target="_blank" class="whatsapp-icon">
+   <img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
+   </a>
 <footer>
     <div class="contenido-footer">
        <p> 
