--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -57,6 +57,10 @@
     </h1>
     <video width="800" height="800" src="../imagenes/video1.mp4" alt="Video service vehiculo"> 
         </video>
+        <a href="https://api.whatsapp.com/send?phone=3415314230"
+target="_blank" class="whatsapp-icon">
+<img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
+</a>
         <footer>
             <div class="contenido-footer">
                <p> 
