--- a/pages/productos.html
+++ b/pages/productos.html
@@ -80,6 +80,10 @@
             </ul>
            </nav>
         </div>
+        <a href="https://api.whatsapp.com/send?phone=3415314230"
+target="_blank" class="whatsapp-icon">
+<img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
+</a>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
 </html>
