--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <title>Pagina Principal</title>
       
         <link rel="stylesheet" href="CSS/style.css">
-      
+        <script src="https://kit.fontawesome.com/46edd455b1.js" crossorigin="anonymous"></script>
       </head>
 <body> <!--todo lo que ve el usuario-->
     <header>
@@ -148,28 +148,14 @@ target="_blank" class="whatsapp-icon">
 </a>
 <main>
 
-        <footer>
-            <div class="contenido-footer">
-               <p> 
-                 @2024 Eberdevis GNC Bv Rondeau 4323 - Lunes a Viernes de 8 a 12 y de 14 a 18hs Sabados de 8 a 12hs 
-               </p> 
-               <nav>
-                <ul>
-                    <li>
-                        <a href="#">Politica de privacidad</a>
-                    </li>
-                    <li>
-                        <a href="#">Terminos y condiciones</a>
-                    </li>
-                    <li>
-                        <a href="#">Contacto</a>
-                    </li>
-                </ul>
-               </nav>
-            </div>
-        </footer>        
+  <footer>
+    <ul class="enlaces3">
+      <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i class="fab fa-instagram"></i> @eberdevisgnc</a></li>
+      <li><a href="https://www.facebook.com/eber.devis?mibextid=LQQJ4d" class="facebook-icon"><i class="fab fa-facebook"></i>Eber Devis GNC</a></li>
+      <li><a href="mailto:eberdevisgnc@hotmail.com"class="gmail-icon"><i class="fab fa-envelope"></i>Eberdevisgnc@gmail.com</a></li>
+    </ul>
+    <p>© 2024 eberdevisgnc.com / Desarrolada por Emilia Devis.</p>
+  </footer>       
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
-
-</textarea>
 </html>
