--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -55,31 +55,19 @@
     <h1>
         Servicio automotor general
     </h1>
-    <video width="800" height="800" src="../imagenes/video1.mp4" alt="Video service vehiculo"> 
-        </video>
+    <video width="1200" height="500" src="../imagenes/video1.mp4" alt="Video service vehiculo" class="video-service"></video>
         <a href="https://api.whatsapp.com/send?phone=3415314230"
 target="_blank" class="whatsapp-icon">
 <img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
 </a>
-        <footer>
-            <div class="contenido-footer">
-               <p> 
-                 @2024 Eberdevis GNC Bv Rondeau 4323 - Lunes a Viernes de 8 a 12 y de 14 a 18hs Sabados de 8 a 12hs 
-               </p> 
-               <nav>
-                <ul>
-                    <li>
-                        <a href="#">Politica de privacidad</a>
-                    </li>
-                    <li>
-                        <a href="#">Terminos y condiciones</a>
-                    </li>
-                    <li>
-                        <a href="#">Contacto</a>
-                    </li>
-                </ul>
-               </nav>
-            </div>
-        </footer> 
+        
+  <footer>
+    <ul class="enlaces3">
+      <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i class="fa fa-instagram"></i> @eberdevisgnc</a></li>
+      <li><a href="https://www.facebook.com/eber.devis?mibextid=LQQJ4d" class="facebook-icon"><i class="fa fa-facebook"></i>   Eber Devis GNC</a></li>
+      <li><a href="mailto:eberdevisgnc@hotmail.com"class="gmail-icon"><i class="fa fa-envelope"></i> Eberdevisgnc@gmail.com</a></li>
+    </ul>
+    <p>© 2024 eberdevisgnc.com / Desarrolada por Emilia Devis.</p>
+  </footer>  
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
 </html>
