--- a/index.html
+++ b/index.html
@@ -90,58 +90,21 @@
     <img src="/imagenes/producto1.jpeg" alt="Producto 1">
     <h3>Cubre volante</h3>
     <p>Cuero reforzado en variedad de colores</p>
-    <a href="#" class="btn btn-primary">Ver</a>
+    <a href="#" class="btn btn-primary">Consultar</a>
   </div>
   <div class="card">
     <img src="/imagenes/producto2.jpeg" alt="Producto 2">
     <h3>Aditivos alemanes Liquimoly</h3>
     <p>Calidad extrema para la solucion de un problema</p>
-    <a href="#" class="btn btn-primary">Ver</a>
+    <a href="#" class="btn btn-primary">Consultar</a>
   </div>
   <div class="card">
     <img src="/imagenes/presupuesto.jpg" alt="Producto 3">
     <h3>Producto 3</h3>
     <p>Descripción del producto 3</p>
-     <a href="#" class="btn btn-primary">Ver</a>
+     <a href="#" class="btn btn-primary">Consultar</a>
   </div>
 </div>
-<!--<section>
-  <div>
-  <div class="card" style="width: 21rem;">
-    <img src="/imagenes/producto1.jpeg" class="card-img-top" alt="Producto cubre volante">
-    <div class="card-body">
-      <h5 class="card-title">Cubre Volante</h5>
-      <p class="card-text">Cubre volante de cuero reforzado universal.</p>
-      <a href="#" class="btn btn-primary">Ver</a>
-    </div>
-  </section>
-    <section>
-    <div class="card" style="width: 21rem;">
-      <img src="/imagenes/producto2.jpeg" class="card-img-top" alt="Productos aditivos">
-      <div class="card-body">
-        <h5 class="card-title">Aditivos Liquimoly</h5>
-        <p class="card-text">Soluciona tus problemas con estos aditivos</p>
-        <a href="#" class="btn btn-primary">Ver</a>
-      </div>
-  </div>
-</section>-->
-<!--<section card="card-container">
-    <article class="card">
-        <img src="../imagenes/producto1.jpeg" alt="" class="img-card" width="200" height="200"> 
-        <h4>Cubre volante Oregon</h4>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores architecto optio obcaecati possimus labore illum nulla, eveniet expedita delectus voluptatibus tempore quia nisi dolorum ex dolor, soluta omnis qui? Minus.</p>
-    </article>
-    <article class="card">
-        <img src="../imagenes/producto2.jpeg" alt="" class="img-card" width="200" height="200">
-        <h4>Aditivos Liquimoly</h4>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores architecto optio obcaecati possimus labore illum nulla, eveniet expedita delectus voluptatibus tempore quia nisi dolorum ex dolor, soluta omnis qui? Minus.</p>
-    </article>
-    <article class="card">
-    <img src="../imagenes/producto3.jpeg" alt="" class="img-card" width="200" height="200">
-    <h4>Escobilla Bosch 22'</h4>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores architecto optio obcaecati possimus labore illum nulla, eveniet expedita delectus voluptatibus tempore quia nisi dolorum ex dolor, soluta omnis qui? Minus.</p>
-</article> 
-</section> -->
 <a href="https://api.whatsapp.com/send?phone=3415314230"
 target="_blank" class="whatsapp-icon">
 <img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
@@ -150,9 +113,9 @@ target="_blank" class="whatsapp-icon">
 
   <footer>
     <ul class="enlaces3">
-      <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i class="fab fa-instagram"></i> @eberdevisgnc</a></li>
-      <li><a href="https://www.facebook.com/eber.devis?mibextid=LQQJ4d" class="facebook-icon"><i class="fab fa-facebook"></i>Eber Devis GNC</a></li>
-      <li><a href="mailto:eberdevisgnc@hotmail.com"class="gmail-icon"><i class="fab fa-envelope"></i>Eberdevisgnc@gmail.com</a></li>
+      <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i class="fa fa-instagram"></i> @eberdevisgnc</a></li>
+      <li><a href="https://www.facebook.com/eber.devis?mibextid=LQQJ4d" class="facebook-icon"><i class="fa fa-facebook"></i>   Eber Devis GNC</a></li>
+      <li><a href="mailto:eberdevisgnc@hotmail.com"class="gmail-icon"><i class="fa fa-envelope"></i> Eberdevisgnc@gmail.com</a></li>
     </ul>
     <p>© 2024 eberdevisgnc.com / Desarrolada por Emilia Devis.</p>
   </footer>       
