--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -52,12 +52,13 @@
         </section>
     </header>
     <main>
+      <img src="/imagenes/fotobebeeber.svg" alt="Foto bebe Eber Devis" width="1155" height="500">
    <h1>
     Nosotros
    </h1>
    <section>
    <p>
-    Somos una empresa con 30 anos de experiencia en el rubro automotor. Siempre queremos brindarlle una solucion integral al cliente, teniendo tecnicos especializados en mecanica automotriz y al mismo tiempo gran variedad y calidad de repuestos. 
+    Todo empezo por un niño apasionado por los autos  Somos una empresa con 30 años de experiencia en el rubro automotor. Siempre queremos brindarlle una solucion integral al cliente, teniendo tecnicos especializados en mecanica automotriz y al mismo tiempo gran variedad y calidad de repuestos. 
    </p>
    <h2>
     Trayectoria
@@ -75,25 +76,14 @@
    target="_blank" class="whatsapp-icon">
    <img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
    </a>
-<footer>
-    <div class="contenido-footer">
-       <p> 
-         @2024 Eberdevis GNC Bv Rondeau 4323 - Lunes a Viernes de 8 a 12 y de 14 a 18hs Sabados de 8 a 12hs 
-       </p> 
-       <nav>
-        <ul>
-            <li>
-                <a href="#">Politica de privacidad</a>
-            </li>
-            <li>
-                <a href="#">Terminos y condiciones</a>
-            </li>
-            <li>
-                <a href="#">Contacto</a>
-            </li>
-        </ul>
-       </nav>
-    </div>
-</footer> 
+
+   <footer>
+    <ul class="enlaces3">
+      <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i class="fa fa-instagram"></i> @eberdevisgnc</a></li>
+      <li><a href="https://www.facebook.com/eber.devis?mibextid=LQQJ4d" class="facebook-icon"><i class="fa fa-facebook"></i>   Eber Devis GNC</a></li>
+      <li><a href="mailto:eberdevisgnc@hotmail.com"class="gmail-icon"><i class="fa fa-envelope"></i> Eberdevisgnc@gmail.com</a></li>
+    </ul>
+    <p>© 2024 eberdevisgnc.com / Desarrolada por Emilia Devis.</p>
+  </footer>  
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
 </html>
