--- a/pages/productos.html
+++ b/pages/productos.html
@@ -62,28 +62,14 @@
     <img src="../imagenes/producto3.jpeg" alt="Escobillas para vehiculos" width="200" height="200" id="producto1">
     Escobilla Bosch 22'
     <footer>
-        <div class="contenido-footer">
-           <p> 
-             @2024 Eberdevis GNC Bv Rondeau 4323 - Lunes a Viernes de 8 a 12 y de 14 a 18hs Sabados de 8 a 12hs 
-           </p> 
-           <nav>
-            <ul>
-                <li>
-                    <a href="#">Politica de privacidad</a>
-                </li>
-                <li>
-                    <a href="#">Terminos y condiciones</a>
-                </li>
-                <li>
-                    <a href="#">Contacto</a>
-                </li>
-            </ul>
-           </nav>
-        </div>
-        <a href="https://api.whatsapp.com/send?phone=3415314230"
-target="_blank" class="whatsapp-icon">
-<img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
-</a>
-    </footer>
+     
+  <footer>
+    <ul class="enlaces3">
+      <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i class="fa fa-instagram"></i> @eberdevisgnc</a></li>
+      <li><a href="https://www.facebook.com/eber.devis?mibextid=LQQJ4d" class="facebook-icon"><i class="fa fa-facebook"></i>   Eber Devis GNC</a></li>
+      <li><a href="mailto:eberdevisgnc@hotmail.com"class="gmail-icon"><i class="fa fa-envelope"></i> Eberdevisgnc@gmail.com</a></li>
+    </ul>
+    <p>© 2024 eberdevisgnc.com / Desarrolada por Emilia Devis.</p>
+  </footer>  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script></body>
 </html>
