--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </head>
 <body> <!--todo lo que ve el usuario-->
     <header>
-        <img src="/imagenes/logoebgnc.svg" alt="Logo Eber Devis GNC" width="200" height="95" id="logoeberdevis">
+        <img src="./imagenes/logoebgnc.svg" alt="Logo Eber Devis GNC" width="200" height="95" id="logoeberdevis">
         <section class="menu1">
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
@@ -62,13 +62,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="./imagenes/3.svg" class="d-block w-100" alt="Foto del frente" width="500" height="500">
+      <img src="./imagenes/fotofrente.svg" class="d-block w-100" alt="Foto del frente" width="500" height="500">
     </div>
     <div class="carousel-item">
-      <img src="./imagenes/2.svg" class="d-block w-100" alt="Foto de mostrador" width="500" height="500">
+      <img src="./imagenes/fotomostrador.svg" class="d-block w-100" alt="Foto de mostrador" width="500" height="500">
     </div>
     <div class="carousel-item">
-      <img src="./imagenes/1.svg" class="d-block w-100" alt="Foto de Taller" width="500" height="500">
+      <img src="./imagenes/fototaller3.svg" class="d-block w-100" alt="Foto de Taller" width="500" height="500">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -79,35 +79,36 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
+  </div>
 <h2> Nuestros servicios <h2>
  <img src="./imagenes/presupuesto.jpg" alt="Referencia de pedir un presupuesto" width="400" height="200"> 
  <strong>Pedinos un presupuesto, no dudes en contactarte!</strong>
-
+ <a href="#" class="btn btn-primary">Consultar</a>
+</div>
  <h3><br>Nuestros productos <br> </h3>
  <div class="card-container">
   <div class="card">
-    <img src="/imagenes/producto1.jpeg" alt="Producto 1">
-    <h3>Cubre volante</h3>
+    <img src="./imagenes/producto1.jpeg" alt="Producto 1">
+    <h4>Cubre volante</h4>
     <p>Cuero reforzado en variedad de colores</p>
     <a href="#" class="btn btn-primary">Consultar</a>
   </div>
   <div class="card">
-    <img src="/imagenes/producto2.jpeg" alt="Producto 2">
-    <h3>Aditivos alemanes Liquimoly</h3>
+    <img src="./imagenes/producto2.jpeg" alt="Producto 2">
+    <h4>Aditivos alemanes Liquimoly</h4>
     <p>Calidad extrema para la solucion de un problema</p>
     <a href="#" class="btn btn-primary">Consultar</a>
   </div>
   <div class="card">
-    <img src="/imagenes/presupuesto.jpg" alt="Producto 3">
-    <h3>Producto 3</h3>
+    <img src="./imagenes/presupuesto.jpg" alt="Producto 3">
+    <h4>Producto 3</h4>
     <p>Descripción del producto 3</p>
      <a href="#" class="btn btn-primary">Consultar</a>
   </div>
 </div>
 <a href="https://api.whatsapp.com/send?phone=3415314230"
 target="_blank" class="whatsapp-icon">
-<img src="/imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
+<img src="./imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
 </a>
 <main>
 
