--- a/index.html
+++ b/index.html
@@ -2,33 +2,32 @@
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8"> <!--el tipo de simbolos que podes utilizar-->
-
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--compatibilidad con los navegadores viejitos-->
-
-  <!-- Escala o dise;o responsive-->
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-  <title>Document</title> <!--La que le da el nombre en la pestana-->
-
+  <!--Metaetiquetas de SEO-->
+  <meta name="description" content="Taller mecánico especializado en GNC y casa de repuestos del automotor. Ofrecemos
+    servicios de reparación, mantenimiento y venta de repuestos para todas las marcas de vehículos. Atención profesional
+    y rápida. ¡Contáctanos hoy!">
+  <meta name="keywords" content="#">
+  <!-- Fuente de CSS-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Radio+Canada+Big:ital,wght@0,400..700;1,400..700&display=swap"
     rel="stylesheet">
-
-  <title>Pagina Principal</title>
-
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./imagenes/faviconicono1.svg" type="image/x-icon">
+  <!-- CSS de Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <!-- Un CSS para todo el proyecto-->
   <link rel="stylesheet" href="CSS/style.css">
+  <!--La que le da el nombre en la pestana-->
+  <title>Inicio | Eber Devis GNC</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <script src="https://kit.fontawesome.com/46edd455b1.js" crossorigin="anonymous"></script>
-
 </head>
 
-<body> <!--todo lo que ve el usuario-->
+<body> <!--BODY todo lo que ve el usuario-->
   <header>
     <img src="./imagenes/logoebgnc.svg" alt="Logo Eber Devis GNC" id="logoeberdevis">
     <section class="menu1">
@@ -87,14 +86,16 @@
         <span class="visually-hidden">Previous</span>
       </button>
       <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-        data-bs-slide="next">
+        data-b  s-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <h2> Nuestros servicios <h2>
+    
+    <h2> Nuestros servicios </h2>
         <img src="./imagenes/presupuesto.jpg" alt="Referencia de pedir un presupuesto" width="400px" height="200px">
         <strong>Pedinos un presupuesto, no dudes en contactarte!</strong>
+      </section>
         <div class="container">
           <div class="object-fit-cover border rounded">
             <section id="formularioturnos">
@@ -120,9 +121,7 @@
               <div class="calendario">
                 <input type="date" class="form-control form-control-lg">
               </div>
-              
               <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">Enviar</button>
-            </section>
           </div>
         </div>
         <h3><br>Nuestros productos <br> </h3>
@@ -150,7 +149,6 @@
           <img src="./imagenes/iconowsp.png" alt="whatsapp" class="whatsapp-icon">
         </a>
         <main>
-
           <footer>
             <ul class="enlaces3">
               <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i
