--- a/pages/productos.html
+++ b/pages/productos.html
@@ -2,26 +2,23 @@
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8"> <!--el tipo de simbolos que podes utilizar-->
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--compatibilidad con los navegadores viejitos-->
-
-
-  <!-- Escala o dise;o responsive-->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Escala o dise;o responsive-->
+  <!-- Metaetiquetas de SEO-->
+  <meta name="description" content="#">
+  <meta name="keywords" content="#">
+  <!-- CSS Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-  <title>productos</title> <!--La que le da el nombre en la pestana-->
-
+  <!-- Fuente del proyecto-->
   <link rel="preconnect" href="[fonts.googleapis.com">
-
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-
+  <!--- Favicon -->
+  <link rel="shortcut icon" href="../imagenes/faviconicono1.svg" type="image/x-icon">
+<!-- un CSS para todo el proyecto -->
   <link rel="stylesheet" href="../CSS/style.css">
+<!--La que le da el nombre en la pestana-->
+  <title> Productos | Eber Devis GNC</title> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <script src="https://kit.fontawesome.com/46edd455b1.js" crossorigin="anonymous"></script>
 </head>
@@ -63,6 +60,7 @@
       <img src="../imagenes/1.svg" alt="Equipos de GNC">
       <img src="../imagenes/12.svg" alt="Aditivos">
     </section>
+    <div>
     <h1 class="animate__animated animate__bounce">
       Nuestros productos
     </h1>
