--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -2,26 +2,23 @@
 <html lang="en">
 
 <head>
-
   <meta charset="UTF-8"> <!--el tipo de simbolos que podes utilizar-->
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!--compatibilidad con los navegadores viejitos-->
-
-  <!-- Escala o dise;o responsive-->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Escala o dise;o responsive-->
+  <!-- Metaetiquetas de SEO-->
+  <meta name="description" content="#">
+  <meta name="keywords" content="#">
+  <!-- CSS Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-  <title>Document</title> <!--La que le da el nombre en la pestana-->
-
+  <!-- Fuente del proyecto-->
   <link rel="preconnect" href="[fonts.googleapis.com">
-
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
-  <title>Document</title>
-
+  <!--- Favicon -->
+  <link rel="shortcut icon" href="../imagenes/faviconicono1.svg" type="image/x-icon">
+<!-- un CSS para todo el proyecto -->
   <link rel="stylesheet" href="../CSS/style.css">
+<!--La que le da el nombre en la pestana-->
+  <title> Servicios | Eber Devis GNC</title> 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <script src="https://kit.fontawesome.com/46edd455b1.js" crossorigin="anonymous"></script>
 </head>
@@ -74,6 +71,47 @@
         </div>
       </div>
     </section>
+
+    <div class="container">
+      <section id="serviciosed">
+        <section class="box-servicios">
+          <h3 class="servicio-titulo">Servicio automotor General</h3>
+          <img class="servicioimg" src="../imagenes/fototaller3.svg" alt="Diseño de uñas">
+          <p class="parrafoindex">
+            El servicio automotor general es esencial para el mantenimiento y buen funcionamiento de cualquier vehículo.
+            Este servicio abarca una amplia gama de tareas y procedimientos que aseguran que el automóvil opere de
+            manera eficiente y segura. El mantenimiento regular del vehículo no solo prolonga su vida útil, sino que
+            también mejora su rendimiento y eficiencia. Ayuda a prevenir fallos inesperados y costosas reparaciones a
+            largo plazo, y asegura que el vehículo opere de manera segura en todo momento.
+
+          </p>
+
+        </section>
+        <section class="box-servicios">
+
+          <h3 class="Instalacion-titulo">Instalacion de GNC</h3>
+          <img class="instalacionimg" src="../imagenes/gnc.svg" alt="Estetica y confort">
+          <p class="parrafoindex">
+            La instalación de GNC (Gas Natural Comprimido) en vehículos es un proceso especializado que requiere
+            precisión, conocimientos técnicos y atención a los detalles.
+          </p>
+
+        </section>
+        <section class="box-servicios">
+
+          <h3 class="repuestostitulo">Casa de repuestos</h3>
+          <img class="repuestosimg" src="../imagenes/fotomostrador.svg" alt="Personal calificado">
+          <p class="parrafoindex">
+            Somos una casa de repuestos especializada en la venta de componentes y piezas necesarias
+            para el mantenimiento, reparación y mejora de vehículos. Desempeñamos un papel crucial
+            en el sector automotor, ofreciendo una amplia variedad de productos que permiten a los propietarios y
+            talleres mantener los vehículos en óptimas condiciones. 
+          </p>
+
+        </section>
+      </section>
+    </div>
+    </div>
     <video width="1200" height="500" src="../imagenes/video1.mp4" alt="Video service vehiculo"
       class="video-service"></video>
 
