--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
     </div>
     
     <h2> Nuestros servicios </h2>
-        <img src="./imagenes/presupuesto.jpg" alt="Referencia de pedir un presupuesto" width="400px" height="200px">
-        <strong>Pedinos un presupuesto, no dudes en contactarte!</strong>
+        <img src="./imagenes/presupuesto.jpg" alt="Referencia de pedir un presupuesto" width="50%" height="20%">
+        <p><strong>Pedinos un presupuesto, no dudes en contactarte!</strong></p>
       </section>
         <div class="container">
           <div class="object-fit-cover border rounded">
