--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -112,7 +112,7 @@
       </section>
     </div>
     </div>
-    <video width="1200" height="500" src="../imagenes/video1.mp4" alt="Video service vehiculo"
+    <video width=80% height="500" src="../imagenes/video1.mp4" autoplay controls alt="Video service vehiculo"
       class="video-service"></video>
 
     <a href="https://api.whatsapp.com/send?phone=3415314230" target="_blank" class="whatsapp-icon">
