--- a/pages/productos.html
+++ b/pages/productos.html
@@ -56,9 +56,9 @@
   </header>
   <main>
     <section class="portada-productos">
-      <img src="../imagenes/2.svg" alt="Repuestos automotor">
-      <img src="../imagenes/1.svg" alt="Equipos de GNC">
-      <img src="../imagenes/12.svg" alt="Aditivos">
+      <img src="../imagenes/2.svg" alt="Repuestos automotor" width="33%">
+      <img src="../imagenes/1.svg" alt="Equipos de GNC" width="33%">
+      <img src="../imagenes/12.svg" alt="Aditivos"width="33%">
     </section>
     <div>
     <h1 class="animate__animated animate__bounce">
@@ -87,7 +87,7 @@
     <a href="https://api.whatsapp.com/send?phone=3415314230" target="_blank" class="whatsapp-icon">
       <img src="../imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
     </a>
-
+  </main>
     <footer>
       <ul class="enlaces3">
         <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i
