--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -71,7 +71,6 @@
         </div>
       </div>
     </section>
-
     <div class="container">
       <section id="serviciosed">
         <section class="box-servicios">
@@ -118,7 +117,7 @@
     <a href="https://api.whatsapp.com/send?phone=3415314230" target="_blank" class="whatsapp-icon">
       <img src="../imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
     </a>
-
+  </main>
     <footer>
       <ul class="enlaces3">
         <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i
