--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
           </div>
         </div>
         <a href="https://api.whatsapp.com/send?phone=3415314230" target="_blank" class="whatsapp-icon">
-          <img src="./imagenes/iconowsp.png" alt="whatsapp" class="whatsapp-icon">
+          <img src="./imagenes/iconowsp.png" alt="whatsapp" class="whatsapp-icon" width="50px" height="50px">
         </a>
-        <main>
+      </main>
           <footer>
             <ul class="enlaces3">
               <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i
