--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -69,7 +69,7 @@
         <a href="https://api.whatsapp.com/send?phone=3415314230" target="_blank" class="whatsapp-icon">
           <img src="../imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
         </a>
-
+      </main>
       <footer>
         <ul class="enlaces3">
           <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i
