--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </div>
         </div>
         <a href="https://api.whatsapp.com/send?phone=3415314230" target="_blank" class="whatsapp-icon">
-          <img src="./imagenes/iconowsp.png" alt="whatsapp" class="whatsapp-icon" width="50px" height="50px">
+          <img src="./imagenes/iconowsp.png" alt="whatsapp" class="whatsapp-icon" width="50" height="50">
         </a>
       </main>
           <footer>
