--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Taller mecánico especializado en GNC y casa de repuestos del automotor. Ofrecemos
     servicios de reparación, mantenimiento y venta de repuestos para todas las marcas de vehículos. Atención profesional
     y rápida. ¡Contáctanos hoy!">
-  <meta name="keywords" content="#">
+  <meta name="keywords" content="Casa de repuestos del automotor rosario, reparaciones automotrices generales zona norte, instalacion de gnc 3ra 4ta y 5ta generacion">
   <!-- Fuente de CSS-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
