--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8"> <!--el tipo de simbolos que podes utilizar-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Escala o dise;o responsive-->
   <!-- Metaetiquetas de SEO-->
-  <meta name="description" content="#">
-  <meta name="keywords" content="#">
+  <meta name="description"
+    content="Nosotros somos un taller mecanico especializado en GNC, realizamos reparaciones generales en todos los vehiculos y vendemos todos los repuestos que necesites.">
+  <meta name="keywords" content=" gnc, vehiculos, gas">
   <!-- CSS Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -15,13 +16,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!--- Favicon -->
   <link rel="shortcut icon" href="../imagenes/faviconicono1.svg" type="image/x-icon">
-<!-- un CSS para todo el proyecto -->
+  <!-- un CSS para todo el proyecto -->
   <link rel="stylesheet" href="../CSS/style.css">
-<!--La que le da el nombre en la pestana-->
-  <title> Nosotros| Eber Devis GNC</title> 
+  <!--La que le da el nombre en la pestana-->
+  <title> Nosotros| Eber Devis GNC</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
   <script src="https://kit.fontawesome.com/46edd455b1.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <header>
     <img src="../imagenes/logoebgnc.svg" alt="Logo Eber Devis GNC" width="200" height="95" id="logoeberdevis">
@@ -79,20 +81,20 @@
       <img src="../imagenes/iconowsp.png" alt="whatsapp" width="50" height="50">
     </a>
   </main>
-    <footer>
-      <ul class="enlaces3">
-        <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i
-              class="fa fa-instagram"></i> @eberdevisgnc</a></li>
-        <li><a href="https://www.facebook.com/eber.devis?mibextid=LQQJ4d" class="facebook-icon"><i
-              class="fa fa-facebook"></i> Eber Devis GNC</a></li>
-        <li><a href="mailto:eberdevisgnc@hotmail.com" class="gmail-icon"><i class="fa fa-envelope"></i>
-            Eberdevisgnc@gmail.com</a></li>
-      </ul>
-      <p>© 2024 eberdevisgnc.com / Desarrolada por Emilia Devis.</p>
-    </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"></script>
+  <footer>
+    <ul class="enlaces3">
+      <li><a href="https://www.instagram.com/eberdevisgnc?igsh=MThvZTgyM2poMDhkeA==" class="instagram-icon"><i
+            class="fa fa-instagram"></i> @eberdevisgnc</a></li>
+      <li><a href="https://www.facebook.com/eber.devis?mibextid=LQQJ4d" class="facebook-icon"><i
+            class="fa fa-facebook"></i> Eber Devis GNC</a></li>
+      <li><a href="mailto:eberdevisgnc@hotmail.com" class="gmail-icon"><i class="fa fa-envelope"></i>
+          Eberdevisgnc@gmail.com</a></li>
+    </ul>
+    <p>© 2024 eberdevisgnc.com / Desarrolada por Emilia Devis.</p>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
