--- a/pages/productos.html
+++ b/pages/productos.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8"> <!--el tipo de simbolos que podes utilizar-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Escala o dise;o responsive-->
   <!-- Metaetiquetas de SEO-->
-  <meta name="description" content="#">
-  <meta name="keywords" content="#">
+  <meta name="description" content="Nuestros productos los podras ver ingresando en esta pagina, calidad y variedad innegociable.">
+  <meta name="keywords" content="repuestos automotor, instalacion de gnc, reparaciones">
   <!-- CSS Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
