--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8"> <!--el tipo de simbolos que podes utilizar-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Escala o dise;o responsive-->
   <!-- Metaetiquetas de SEO-->
-  <meta name="description" content="#">
-  <meta name="keywords" content="#">
+  <meta name="description" content="Brindamos el mejor servicio de instalacion de GNC, ademas realizamos reparaciones generalez y venta de repuestos del automotor">
+  <meta name="keywords" content="Instalacion de gnc, reparaciones generales, repuestos automotriz">
   <!-- CSS Bootstrap-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
